Fixing the right header alignment

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -116,6 +116,10 @@ body {
 	display:inline;
 }
 
+#header-right {
+	padding-left: 20px;
+}
+
 /******************************************/
 /* Page Footer Navigation Links */
 /******************************************/
